--- a/MP2-LevelDesign-learningkit/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MP2-LevelDesign-learningkit/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,7 +126,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
+MRUItem0=/Game/LearningKit_Games/Maps/LearningKit_Games_Level1
+MRUItem1=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -223,11 +224,14 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Showcase
+LastLevel=/Game/LearningKit_Games/Maps/LearningKit_Games_Level1
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/Enemy/PursuerEnemy.PursuerEnemy
+OpenAssetsAtExit=/Game/LearningKit_Games/UI/WB_healthbar.WB_healthbar
+OpenAssetsAtExit=/Game/LearningKit_Games/UI/WB_Restart.WB_Restart
+OpenAssetsAtExit=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter.BP_LearningKit_PlayerCharacter
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1025,6 +1029,8 @@ EnemyPursuer_C.MovementComponent=True
 EnemyPursuer_C.Shape=True
 EnemyPursuer_C.Materials=True
 EnemyController_C.Default=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1086,26 +1092,26 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LearningKit_Games/Blueprints/Enemy/PursuerEnemy
-MRUItem1=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
-MRUItem2=/Game/LearningKit_Games/AI/BTT_FindRandomPatrol
-MRUItem3=/Game/LearningKit_Games/AI/BTT_ChasePlayer
-MRUItem4=/Game/LearningKit_Games/AI/EnemyController
-MRUItem5=/Game/LearningKit_Games/AI/EnemyPursuer
-MRUItem6=/Game/LearningKit_Games/AI/BT_Enemy
-MRUItem7=/Game/LearningKit_Games/AI/BB_Enemy
-MRUItem8=/Game/LearningKit_Games/AI/BTTask_BlueprintBase_New
-MRUItem9=/Game/LearningKit_Games/AI/BP_LearningKit_PlayerCharacter
-MRUItem10=/Game/LearningKit_Games/Blueprints/Enemy/EnemyIdleRum
-MRUItem11=/Game/LearningKit_Games/Assets/Characters/Character/Animations/RollMontage
-MRUItem12=/Game/LearningKit_Games/Blueprints/Enemy/EnemyAttack
-MRUItem13=/Game/LearningKit_Games/Blueprints/Enemy/EnemyAnimation
-MRUItem14=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_IdleRun_2D
-MRUItem15=/Game/LearningKit_Games/Blueprints/Enemy/AttackPrimary
-MRUItem16=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPerson_IdleRun_2D
-MRUItem17=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Run
-MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_CrouchIdle
-MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPersonIdle
+MRUItem0=/Game/LearningKit_Games/UI/WB_Restart
+MRUItem1=/Game/LearningKit_Games/UI/WB_healthbar
+MRUItem2=/Game/LearningKit_Games/Blueprints/PlayerCharacter/BP_LearningKit_PlayerCharacter
+MRUItem3=/Game/LearningKit_Games/Blueprints/Enemy/PursuerEnemy
+MRUItem4=/Game/LearningKit_Games/AI/BTT_FindRandomPatrol
+MRUItem5=/Game/LearningKit_Games/AI/BTT_ChasePlayer
+MRUItem6=/Game/LearningKit_Games/AI/EnemyController
+MRUItem7=/Game/LearningKit_Games/AI/EnemyPursuer
+MRUItem8=/Game/LearningKit_Games/AI/BT_Enemy
+MRUItem9=/Game/LearningKit_Games/AI/BB_Enemy
+MRUItem10=/Game/LearningKit_Games/AI/BTTask_BlueprintBase_New
+MRUItem11=/Game/LearningKit_Games/AI/BP_LearningKit_PlayerCharacter
+MRUItem12=/Game/LearningKit_Games/Blueprints/Enemy/EnemyIdleRum
+MRUItem13=/Game/LearningKit_Games/Assets/Characters/Character/Animations/RollMontage
+MRUItem14=/Game/LearningKit_Games/Blueprints/Enemy/EnemyAttack
+MRUItem15=/Game/LearningKit_Games/Blueprints/Enemy/EnemyAnimation
+MRUItem16=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_IdleRun_2D
+MRUItem17=/Game/LearningKit_Games/Blueprints/Enemy/AttackPrimary
+MRUItem18=/Game/LearningKit_Games/Assets/Characters/Character/Animations/ThirdPerson_Retarget/ThirdPerson_IdleRun_2D
+MRUItem19=/Game/LearningKit_Games/Assets/Characters/Character/Animations/epicCharacter_Run
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1213,16 +1219,17 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CapsuleComponent=
 EnemyPursuer_C="\"Object.Actor.Tags\" "
-Character="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
+Character=
+Pawn=
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[1].KeyType\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-BP_LearningKit_PlayerCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_LearningKit_PlayerCharacter_C=
 PursuerEnemy_C="\"Object.Actor.Tags\" "
+WB_healthbar_C="\"Object.Appearance.ColorAndOpacity\" "
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2170,9 +2177,10 @@ AnimationEditor.LastCompileMethod=Unknown
 [DetailCategoriesAdvanced]
 CharacterMovementComponent.Character Movement: Jumping / Falling=True
 AnimMontage.Animation=True
+K2Node_CustomEvent.Graph=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
